--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -87,6 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="#FFFFFF"
+        android:onClick="open_mentalWellness"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.479"
