--- a/app/src/main/res/layout/activity_nutrition_tracker.xml
+++ b/app/src/main/res/layout/activity_nutrition_tracker.xml
@@ -41,7 +41,7 @@
         android:text="Food Name:"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+        app:layout_constraintTop_toBottomOf="@+id/date_id" />
 
     <TextView
         android:id="@+id/textView33"
@@ -50,18 +50,20 @@
         android:layout_marginStart="24dp"
         android:text="Carbs:"
         android:textSize="16sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName2"
+        app:layout_constraintBaseline_toBaselineOf="@+id/carbs_id"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView34"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginEnd="13dp"
         android:text="Protein:"
         android:textSize="16sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName4"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/pro_id"
+        app:layout_constraintEnd_toStartOf="@+id/pro_id"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView35"
@@ -70,122 +72,148 @@
         android:layout_marginStart="25dp"
         android:text="Fats:"
         android:textSize="16sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName5"
+        app:layout_constraintBaseline_toBaselineOf="@+id/fats_id"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView36"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginEnd="12dp"
         android:text="Calories:"
         android:textSize="16sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName6"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/calories_id"
+        app:layout_constraintEnd_toStartOf="@+id/calories_id" />
 
     <TextView
         android:id="@+id/textView37"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="21dp"
         android:text="Date:"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
+        app:layout_constraintEnd_toStartOf="@+id/date_id"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView31" />
 
     <EditText
-        android:id="@+id/editTextDate"
-        android:layout_width="0dp"
+        android:id="@+id/date_id"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="241dp"
+        android:layout_marginEnd="211dp"
         android:ems="10"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView37"
         app:layout_constraintTop_toBottomOf="@+id/textView31" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/food_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
+        app:layout_constraintBottom_toTopOf="@+id/carbs_id"
         app:layout_constraintStart_toEndOf="@+id/textView32" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="0dp"
+        android:id="@+id/carbs_id"
+        android:layout_width="66dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="13dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="21dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
-        app:layout_constraintStart_toEndOf="@+id/textView33"
+        app:layout_constraintEnd_toEndOf="@+id/id_del"
+        app:layout_constraintStart_toEndOf="@+id/textView35"
         app:layout_constraintTop_toBottomOf="@+id/textView32" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/pro_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginEnd="7dp"
+        android:layout_marginEnd="255dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
-        app:layout_constraintStart_toEndOf="@+id/textView36"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView34"
+        app:layout_constraintTop_toBottomOf="@+id/carbs_id" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName5"
+        android:id="@+id/fats_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:layout_marginTop="6dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginEnd="6dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
+        app:layout_constraintEnd_toEndOf="@+id/carbs_id"
         app:layout_constraintStart_toEndOf="@+id/textView35"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
+        app:layout_constraintTop_toBottomOf="@+id/pro_id" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName6"
-        android:layout_width="101dp"
+        android:id="@+id/calories_id"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="39dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="27dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
+        app:layout_constraintEnd_toStartOf="@+id/add_btn"
+        app:layout_constraintStart_toEndOf="@+id/textView33"
+        app:layout_constraintTop_toBottomOf="@+id/fats_id" />
 
     <TextView
         android:id="@+id/cal_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="144dp"
+        android:layout_marginEnd="142dp"
         android:text="0000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
+        app:layout_constraintBottom_toTopOf="@+id/date_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView31" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/add_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:text="Add"
+        android:layout_marginEnd="79dp"
+        android:layout_marginBottom="7dp"
+        android:text="Add/Edit"
         android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName6"
-        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName6"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
+        app:layout_constraintBottom_toTopOf="@+id/lview_id"
+        app:layout_constraintEnd_toEndOf="@+id/lview_id" />
+
+    <ListView
+        android:id="@+id/lview_id"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/id_del" />
+
+    <Button
+        android:id="@+id/id_del"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="31dp"
+        android:text="Delete"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/calories_id"
+        app:layout_constraintTop_toBottomOf="@+id/calories_id" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
